# fooyin

data/: icons.qrc
include/gui/: guiconstants.h
src/plugins/: CMakeLists.txt
src/plugins/externaldevices/: CMakeLists.txt  externaldevice.h  externaldevices.json.in  externaldevicesbutton.cpp  externaldevicesbutton.h  externaldevicesconstants.h  externaldevicescontroller.cpp  externaldevicescontroller.h  externaldevicesdialog.cpp  externaldevicesdialog.h  externaldevicesplugin.cpp  externaldevicesplugin.h
src/plugins/externaldevices/backends/: externaldevicebackend.h  linuxudisksbackend.cpp  linuxudisksbackend.h  stubexternaldevicebackend.cpp  stubexternaldevicebackend.h
src/plugins/externaldevices/settings/: externaldevicessettings.cpp  externaldevicessettings.h
